--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.html", title: "Home", icon: none}
-  - {title: "Modules", file: "/modules.md", icon: none}
+  - {title: "Modules", file: "modules.md", icon: none}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Email Us, icon: envelope, url: "mailto:nickoal.eichmann@colorado.edu"}
