--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", title: "Home", icon: none}
+  - {file: "home.md", title: "Home", icon: none}
   - {title: "Modules", file: "modules.md", icon: none}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
