--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "ARSC 5040 Qualitative Data Tools"
 author: "Jordan Wrigley and Nickoal Eichmann-Kalwara"
 description: "University of Colorado Boulder"
-permalink: /:title/
+permalink: /home.md/
 lang: "en"
 excerpt_separator: "\n\n\n"
 date_format: "%B %d, %Y"
@@ -10,7 +10,7 @@ date_format: "%B %d, %Y"
 
 show_excerpts: false       # show article excerpts on the home page
 show_frame: false           # adds a gray frame to the site
-show_sidebar: false        # show a sidebar instead of the usual header
+show_sidebar: true        # show a sidebar instead of the usual header
 minimal: true            # use a dark header
 
 # Menu
